"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-05-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-22-prsim-04-11:
	  Added Expr::is_disjunctive() when we only care if expr. type
		is OR or NOR.  
	  Bug fix in ExprAlloc's OR-combination, reference *new* expr, 
		which is not necessarily the last one.  
	  More assertions in structural check.  
	  Updated Expr::*_pull_state() functions.  
	  Enabled -O1 consistency testing for all prsim test cases... PASS!
	  Consider re-enumerating node-value expr-pull... dangerous.
	  Status: perhaps a few more test cases, then merge.  


2006-05-04	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-78-22-prsim-04-10:
	  Added support for debugging checkpoints by producing textual dump.
	  Can invoke: hackt prsim -d <checkpoint>
	  Test support added for diff-ing checkpoints for validation.  
	  Adjusted parenthesization heuristic for pretty-print.  
	  ExprAlloc: denormalize_negation now works on children expressions
		as well as children nodes.  
	  Checkpoint no longer include rule-attribute map because it is 
		both stateless and dependent on the expression allocation.
	  -O1 not quite ready yet for prime time -- more testing required.  


	* HACKT-00-01-04-main-00-78-22-prsim-04-09:
	  cflat_visitor::visit(const state_manager&) now overridable.  
	  Updated PRSIM::Expr::parenthesize, easier to understand/use.
	  Implemented expression allocation optimization in prsim:
		-f fold-literals : skips literal node, and node fans out
			directly to expression, saving a ton of literal exprs.
		-f denormalize-negations : DeMorgan's transformation on
			expressions of negated literals, also saves a ton.  
		-O0 disables opts, -O1 enables both of the above.  
	  ExprAlloc: now maintains freelist of expression slots released