@@ -1,0 +1,34 @@
+# "and-01.prsimrc"
+#	$Id: and-01.prsimrc,v 1.1.2.1 2006/05/06 03:36:59 fang Exp $
+# @haco@ and.haco-a
+# Testing basic AND gate
+
+watchall
+# timing uniform 10
+
+set a 0
+cycle
+assert c 0
+
+set a 1
+cycle
+assert c X
+
+set b 1
+cycle
+assert c 1
+
+set b 0
+cycle
+assert c 0
+
+set a X
+cycle
+assert c 0
+
+set b X
+cycle
+assert c X
+
+time
+
