@@ -1,0 +1,16 @@
+	0	a : 0
+	10	c : 0	[by a:=0]
+WARNING: weak-interference `c'
+>> cause: `a' (val: 1)
+	10	a : 1
+	20	c : X	[by a:=1]
+	20	b : 1
+	30	c : 1	[by b:=1]
+	30	b : 0
+	40	c : 0	[by b:=0]
+	40	a : X
+WARNING: weak-interference `c'
+>> cause: `b' (val: X)
+	40	b : X
+	50	c : X	[by b:=X]
+time: 50
