@@ -30,7 +30,9 @@ event queue:
 	40	a : X
 expecting weak interference of X vs. X on b, propagating to c 
 WARNING: weak-interference `b'
+>> cause: `a' (val: X)
 WARNING: weak-interference `c'
+>> cause: `b' (val: X)
 expect to see c:x in queue, b:x just happened 
 event queue:
 	60	c : X
@@ -47,7 +49,9 @@ time: 100
 event queue:
 expecting weak interference, of course 
 WARNING: weak-interference `b'
+>> cause: `a' (val: X)
 WARNING: weak-interference `c'
+>> cause: `b' (val: X)
 time should be 120, queue should be empty 
 time: 120
 event queue:
