@@ -1,0 +1,34 @@
+# "or-01.prsimrc"
+#	$Id: or-01.prsimrc,v 1.1.2.1 2006/05/06 03:37:12 fang Exp $
+# @haco@ or.haco-a
+# Testing basic OR gate
+
+watchall
+# timing uniform 10
+
+set a 1
+cycle
+assert c 1
+
+set a 0
+cycle
+assert c X
+
+set b 0
+cycle
+assert c 0
+
+set b 1
+cycle
+assert c 1
+
+set a X
+cycle
+assert c 1
+
+set b X
+cycle
+assert c X
+
+time
+
